--- a/index.html
+++ b/index.html
@@ -24,6 +24,6 @@
         코드 결과 나오는 곳
     </div>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-C6RzsynM9kWDrMNeT87bh95OGNyZPhcTNXj1NW7RuBCsyN/o0jlpcV8Qyq46cDfL" crossorigin="anonymous"></script>
-    <script src="script.js"></script>
+    <script type="module" src="/src/main.ts"></script>
   </body>
 </html>
