--- a/index.html
+++ b/index.html
@@ -4,7 +4,6 @@
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <title>HamTaeJunLang-web</title>
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN" crossorigin="anonymous">
     <link href="style.css" rel="stylesheet">
     </head>
   <body>
@@ -16,14 +15,13 @@
     </div>
     <div class="input-group">
       <input id="fileInput" type="file" class="form-control" id="inputGroupFile04" aria-describedby="inputGroupFileAddon04" aria-label="Upload">
-      <button onclick="uploadFile()" class="btn btn-outline-secondary" type="button" id="inputGroupFileAddon04">Button</button>
+      <button class="btn btn-outline-secondary" type="button" id="inputGroupFileAddon04 fileButton">Button</button>
     </div>
     <textarea id="input" spellcheck="false" rows="10" placeholder="코드 입력 창"></textarea>
-    <button onclick="Code()" type="button" class="btn btn-primary">코드 실행</button>
+    <button type="button" class="btn btn-primary">코드 실행</button>
     <div id="output" class="alert" role="alert">
         코드 결과 나오는 곳
     </div>
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-C6RzsynM9kWDrMNeT87bh95OGNyZPhcTNXj1NW7RuBCsyN/o0jlpcV8Qyq46cDfL" crossorigin="anonymous"></script>
     <script type="module" src="/src/main.ts"></script>
   </body>
 </html>
