--- a/index.html
+++ b/index.html
@@ -2,25 +2,74 @@
 <html lang="ko">
   <head>
     <meta charset="utf-8">
+    <link rel="icon" type="image/svg+xml" href="/Hamlang.ico">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <title>HamTaeJunLang-web</title>
-    <link href="style.css" rel="stylesheet">
-    </head>
+    <meta name="author" content="rrayy(함태준)">
+    <meta name="description" content="Hamlang - 프로그래밍 언어를 배우고 실험하는 웹 플레이그라운드">
+    <title>Hamlang - 웹 플레이그라운드</title>
+  </head>
   <body>
-    <h1>함태준 프로그래밍 언어 웹 실행기</h1>
-    <div>
-      <a type="button" class="btn btn-primary">사용법 PPT다운로드</a>
-      <a type="button" href="https://github.com/rrayy-25809/Hamlang.py" class="btn btn-primary">예시코드 다운로드</a>
-      <a type="button" href="https://github.com/rrayy-25809/Hamlang.py/raw/main/main.py" class="btn btn-primary">Python 버전 다운로드</a>
-    </div>
-    <div class="input-group">
-      <input id="fileInput" type="file" class="form-control" id="inputGroupFile04" aria-describedby="inputGroupFileAddon04" aria-label="Upload">
-      <button class="btn btn-outline-secondary" type="button" id="inputGroupFileAddon04 fileButton">Button</button>
-    </div>
-    <textarea id="input" spellcheck="false" rows="10" placeholder="코드 입력 창"></textarea>
-    <button type="button" class="btn btn-primary">코드 실행</button>
-    <div id="output" class="alert" role="alert">
-        코드 결과 나오는 곳
+    <div class="container">
+      <!-- Header -->
+      <header class="header">
+        <div class="header-top">
+          <div class="header-title">
+            <h1 class="title">Hamlang</h1>
+            <p class="subtitle">언어를 배우고 실험하는 공간</p>
+          </div>
+          <div class="header-links">
+            <a href="https://github.com/rrayy-25809/Hamlang.py" class="link-btn" target="_blank">예시 다운로드</a>
+            <a href="https://github.com/rrayy-25809/Hamlang.py/raw/main/main.py" class="link-btn" target="_blank">Python 버전</a>
+          </div>
+        </div>
+      </header>
+
+      <!-- Main Playground -->
+      <main class="playground">
+        <!-- Code Input Section -->
+        <section class="editor-panel">
+          <div class="panel-header">
+            <h2 class="panel-title">코드 입력</h2>
+            <div class="file-upload-wrapper">
+              <input id="fileInput" type="file" class="file-input-hidden" accept=".txt,.py,.hamlang">
+              <button type="button" id="fileButton" class="action-btn file-btn">
+                <span class="btn-icon">📂</span> 파일 불러오기
+              </button>
+            </div>
+          </div>
+          <textarea 
+            id="input" 
+            class="code-editor" 
+            spellcheck="false" 
+            placeholder="여기에 코드를 입력하거나 파일을 불러오세요..."
+          ></textarea>
+        </section>
+
+        <!-- Control Section -->
+        <div class="control-section">
+          <button type="button" id="runButton" class="run-btn">
+            <span class="run-icon">▶</span> 실행
+          </button>
+          <button type="button" id="resetButton" class="reset-btn">
+            <span class="reset-icon">⟲</span> 초기화
+          </button>
+        </div>
+
+        <!-- Output Section -->
+        <section class="output-panel">
+          <div class="panel-header">
+            <h2 class="panel-title">결과</h2>
+          </div>
+          <div id="output" class="output-content">
+            <p class="output-placeholder">코드를 실행하면 결과가 여기에 표시됩니다</p>
+          </div>
+        </section>
+      </main>
+
+      <!-- Footer -->
+      <footer class="footer">
+        <p>Hamlang · <a href="https://github.com/rrayy-25809/Hamlang.ts" target="_blank">GitHub</a></p>
+      </footer>
     </div>
     <script type="module" src="/src/main.ts"></script>
   </body>
